[tool.poetry]
name = "rag-chroma"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
rag-chroma = {path = "packages/rag-chroma", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
streamlit = ">=1.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
